This is the CHANGELOG for amavisd-milter.

20060113:
	amavisd-milter-1.0.4

	Bugfix release.  Added manual page amavisd-milter(8).

	INCOMPATIBILITY with 1.0.3 and previous version:

	Default working directory was changed from /var/amavis/tmp
	to /var/amavis to accordance with amavisd-new $helpers_home
	default value.  To go back to the previous behaviour run
	amavisd-milter with option -w /var/amavis/tmp

20060109:
	When stopping amavisd-new one (maybe not always just one) of milter
	threads amavisd-milter start to eat up a cpu time.
	Submitted by: Grzegorz Piszczek <grzegorz@piszczek.name>

	Fixed bug in mlfi_close(): amavisd-milter dies randomly due to
	segmentation fault.
	Submitted by: Grzegorz Piszczek <grzegorz@piszczek.name>

20051225:
	Added amavisd-milter(8) manual page.  README and website are
	synchronized with this manual page.

	Changed default working directory to /var/amavis (default value
	for amavisd-new helpers home directory).

20051204:
	Some users reports problem with ENOMEM in amavis_response().
	Consequently MAXAMABUF is increased from 1024 to 2048, amavis_request()
	and amavis_response() returns EOVERFLOW when buffer size isn't enough
	and truncated response is logged when debug level is >= 3.

20051202:
	Fixed default path to pidfile in README and website.
	Submitted by: Jerzy Sakol <jerzy.sakol@commgraf.pl>

20050829:
	Added amavisd-new configuration section to README.

20050701:
	amavisd-milter-1.0.3

	Bugfix release.  Properly set amavisd connection timeout.

20050701:
	Set amavisd_timeout instead of mlfi_timeout for -T option.
	Submitted by: Mr.Sompis Junsui <sompis.j@cdg.co.th>

20050701:
	Unlink old pid file on start.

20050605:
	amavisd-milter-1.0.2

	Bugix release.  Fix memory leak in mlfi_cleanup.

20050529:
	amavisd-milter-1.0.1

	Portability release.  Now can be compiled on Debian 3.0, Fedora FC2 and
	FC3, OpenBSD 3.4 and Solaris 9.  Tested on Sourceforge compile farm.