@@ -1,5 +1,11 @@
 This is the CHANGELOG for amavisd-milter.
 
+20060124:
+	README is now generated from amavisd-milter(8) manual page.
+
+	Remove all files and directories in work directory because
+	amavisd-new sometimes don't do it (e.q. when antivirus fail).
+
 20060113:
 	amavisd-milter-1.0.4
 
@@ -89,4 +95,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.17 2006/01/13 18:05:44 reho Exp $
+$Id: CHANGES,v 1.18 2006/01/13 18:13:36 reho Exp $
